@startuml
'https://plantuml.com/class-diagram

interface TreeRepository{
    + Response getTree()
}

interface Response{
    + Boolean isSuccessful()
}

interface TreeInterface<V>{
    + V value()
    + TreeInterface<V> leftChild()
    + TreeInterface<V> rightChild()
}
class InMemoryTreeRepository{
    + Response getTree()
}

TreeRepository <|.. InMemoryTreeRepository

InMemoryTreeRepository *.. TreeInterface: ast

Response <.. TreeRepository
TreeInterface <.. TreeRepository

@enduml